--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container-fluid">
-  <div class="mt-3 row">
+
+  <div class="mt-3 row" *ngIf="!isError; else errorMessage">
     <div class="col-12 fa-3x text-center" *ngIf="repositories.length === 0">
       <i class="fas fa-sync fa-spin"></i>
     </div>
@@ -7,41 +8,53 @@
       <p class="font-weight-light">Fetching data from GITHUB api, please wait...</p>
     </div>
   </div>
+
+  <ng-template #errorMessage>
+    <div class="row mt-3">
+      <div class="col-md-12">
+        <div class="alert alert-warning font-weight-bold text-center" role="alert">
+          <i class="fas fa-exclamation-triangle"></i> An error occurred, please <a routerLink="/">Try again</a>
+        </div>
+      </div>
+    </div>
+  </ng-template>
+
   <div class="row mb-2" *ngFor="let repository of repositories">
     <div class="col-9 col-md-9 col-lg-9 col-xl-9 col-sm-12">
 
-      <div class="card">
-        <div class="row no-gutters">
-          <div class="col-md-2">
-            <img src="{{ repository.avatar }}" class="card-img" alt="...">
-          </div>
-          <div class="col-md-10">
-            <div class="card-body">
-              <h5 class="card-title">{{ repository.name }}</h5>
-              <p class="card-text">{{ repository.description }}</p>
-              <p class="card-text">
-                <span class="row">
-                  <span class="col-md-2 col-lg-2 col-xl-2 col-sm-12 col-12 border border-dark bg-light text-center" >
-                    Stars: {{ repository.stars }}
-                  </span> &nbsp;
-                  <span class="col-md-2 col-lg-2 col-xl-2 col-sm-12 col-12 border border-dark bg-light text-center">
-                    Issues: {{ repository.issues }}
-                  </span>
-                  <span class="col-md-7 col-lg-7 col-xl-7 col-sm-12 col-12">
-                    Last updated 3 mins ago
-                  </span>
-                </span>
-
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
+      <app-repository [repository]="repository"></app-repository>
 
     </div>
   </div>
 
-  <div class="row mb-5">
+  <div class="row mb-5"></div>
 
-  </div>
+  <!--  <div class="row mb-5 text-center" *ngIf="repositories.length > 0">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
+
+        <nav aria-label="Page navigation example">
+          <ul class="pagination text-center">
+            <li class="page-item">
+              <a class="page-link" [queryParams]="{page: 1}"  routerLink="/"><<</a>
+            </li>
+            <li class="page-item" [routerLinkActive]="'active'">
+              <a class="page-link" [routerLink]="currentPage-1"><</a>
+            </li>
+            <ng-container *ngFor="let page of [currentPage, currentPage+1, currentPage+2, currentPage+3]">
+              <li class="page-item" [routerLinkActive]="'active'">
+                <a class="page-link" [queryParams]="{page: page}"  routerLink="/">{{ page }}</a>
+              </li>
+            </ng-container>
+
+            <li class="page-item">
+              <a class="page-link" [queryParams]="{page: currentPage+1}"  routerLink="/">></a>
+            </li>
+
+          </ul>
+        </nav>
+
+      </div>
+
+    </div>-->
+
 </div>
