--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,12 @@
-<p>
-  about works!
-</p>
+<div class="row">
+  <div class="col-md-12">
+    <div class="card bg-dark text-white">
+      <img src="assets/card.jpeg" class="card-img" alt="card">
+      <div class="card-img-overlay font-weight-bold">
+        <h5 class="card-title">About Us</h5>
+        <p class="card-text">This website is created for a coding challenge purposes (FrontEnd)</p>
+        <p class="card-text">&copy; <a href="https://www.linkedin.com/in/haytham-dahri-645795155/" target="_blank">HAYTHAM DAHRI</a></p>
+      </div>
+    </div>
+  </div>
+</div>
