--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,7 +29,7 @@
 
   <div class="row mb-5"></div>
 
-  <!--  <div class="row mb-5 text-center" *ngIf="repositories.length > 0">
+    <div class="row mb-5 text-center" *ngIf="repositories.length > 0">
       <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
 
         <nav aria-label="Page navigation example">
@@ -38,7 +38,7 @@
               <a class="page-link" [queryParams]="{page: 1}"  routerLink="/"><<</a>
             </li>
             <li class="page-item" [routerLinkActive]="'active'">
-              <a class="page-link" [routerLink]="currentPage-1"><</a>
+              <a class="page-link" [queryParams]="{page: currentPage-1}" [routerLink]="'/'"><</a>
             </li>
             <ng-container *ngFor="let page of [currentPage, currentPage+1, currentPage+2, currentPage+3]">
               <li class="page-item" [routerLinkActive]="'active'">
@@ -55,6 +55,6 @@
 
       </div>
 
-    </div>-->
+    </div>
 
 </div>
