--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,21 @@
 <div class="container-fluid">
 
   <div class="mt-3 row" *ngIf="!isError; else errorMessage">
-    <div class="col-12 fa-3x text-center" *ngIf="repositories.length === 0">
-      <i class="fas fa-sync fa-spin"></i>
-    </div>
-    <div class="col-12 fa-3x text-center" *ngIf="repositories.length === 0">
-      <p class="font-weight-light">Fetching data from GITHUB api, please wait...</p>
-    </div>
+    <ng-container *ngIf="repositories.length === 0">
+      <div class="col-12 fa-3x text-center">
+        <i class="fas fa-sync fa-spin"></i>
+      </div>
+      <div class="col-12 fa-3x text-center">
+        <p class="font-weight-light">Fetching data from GITHUB api, please wait...</p>
+      </div>
+    </ng-container>
   </div>
 
   <ng-template #errorMessage>
     <div class="row mt-3">
       <div class="col-md-12">
         <div class="alert alert-warning font-weight-bold text-center" role="alert">
-          <i class="fas fa-exclamation-triangle"></i> An error occurred, please <a routerLink="/">Try again</a>
+          <i class="fas fa-exclamation-triangle"></i> An error occurred, please <a style="cursor: pointer;color: blue;" (click)="reload()">Try again</a>
         </div>
       </div>
     </div>
@@ -29,32 +31,25 @@
 
   <div class="row mb-5"></div>
 
-    <div class="row mb-5 text-center" *ngIf="repositories.length > 0">
-      <div class="col-12 col-sm-12 col-md-12 col-lg-12 text-center">
 
-        <nav aria-label="Page navigation example">
-          <ul class="pagination text-center">
-            <li class="page-item">
-              <a class="page-link" [queryParams]="{page: 1}"  routerLink="/"><<</a>
-            </li>
-            <li class="page-item" [routerLinkActive]="'active'">
-              <a class="page-link" [queryParams]="{page: currentPage-1}" [routerLink]="'/'"><</a>
-            </li>
-            <ng-container *ngFor="let page of [currentPage, currentPage+1, currentPage+2, currentPage+3]">
-              <li class="page-item" [routerLinkActive]="'active'">
-                <a class="page-link" [queryParams]="{page: page}"  routerLink="/">{{ page }}</a>
-              </li>
-            </ng-container>
+</div>
 
-            <li class="page-item">
-              <a class="page-link" [queryParams]="{page: currentPage+1}"  routerLink="/">></a>
-            </li>
+<div class="mt-3 row" *ngIf="!isError && repositories.length !== 0">
+  <div class="col-12 fa-1x text-center">
+    <i class="fas fa-sync fa-spin"></i>
+  </div>
+  <div class="col-12 fa-1x text-center">
+    <p class="font-weight-light">Loading more repositories, please wait...</p>
+  </div>
+</div>
 
-          </ul>
-        </nav>
+<hr>
 
-      </div>
-
-    </div>
+<div *ngIf="!isError"
+     infiniteScroll
+     [infiniteScrollDistance]="2"
+     [infiniteScrollThrottle]="1000"
+     (scrolled)="onScroll()"
+>
 
 </div>
